[package]
name = "dazyners-wasm"
version = "0.1.0"
authors = ["Darryl E. Smith <dazynersstudio@gmail.com>"]
description = "A hello world project by dazynersstudio wasm-pack"
edition = "2018"
license = "GNU General Public License v3.0"
repository = "https://github.com/DazynersStudio/dazyners-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"